2009-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-prepare-flat): Check also whether groups
	with no unread article should be listed if the 2nd arg `predicate' is
	given.

2009-11-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind recenter-top-bottom for Emacs 21, 22, and (S)XEmacs.

2009-11-29  Juri Linkov  <juri@jurta.org>

	* gnus-sum.el (gnus-recenter): Use `recenter-top-bottom'
	when it is fboundp in GNU Emacs 23.1.  Put `isearch-scroll' property
	on `gnus-recenter'. (Bug#4698, Bug#4981)

2009-11-26  Kevin Ryde  <user42@zip.com.au>

	* sha1.el (sha1-string-external): default-directory "/" in case
	otherwise non-existent.  process-connection-type pipe for touch of
	efficiency recommended by elisp manual.  (An aside in Bug#3911.)

2009-11-25  Kevin Ryde  <user42@zip.com.au>

	* dns-mode.el: Add "Keywords: comm".  It's only an editing mode, but
	it's comms related and sgml-mode.el has "comm" on that basis too.

2009-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-decode-region): Don't quote decoded words
	containing tspecial characters if they have been already quoted.

2009-11-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* dns-mode.el (auto-mode-alist): Purecopy string.

2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* hashcash.el (hashcash-generate-payment): Use with-current-buffer.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (help-xref-stack-item): Define for compiler.

2009-10-21  Kevin Ryde  <user42@zip.com.au>

	* dns.el: Add "Keywords: comm", as per net/net-utils.el.

2009-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-remove-overlays): eval-and-compile.

2009-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Remove useless goto-char.
	(gnus-summary-show-thread, gnus-summary-hide-thread): Indent.

2009-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-overlay-get): New alias to overlay-get.